--- a/AdventureWorks/MainWindow.xaml
+++ b/AdventureWorks/MainWindow.xaml
@@ -18,10 +18,14 @@
                   Click="Exit_Click" />
             </MenuItem>
             <MenuItem Header="Products">
+                <MenuItem Header="List"
+                  Click="ProductList_Click" />
                 <MenuItem Header="Detail"
                   Click="ProductDetail_Click" />
             </MenuItem>
             <MenuItem Header="Customers">
+                <MenuItem Header="List"
+                          Click="CustomerList_Click"/>
                 <MenuItem Header="Detail"
                   Click="CustomerDetail_Click" />
             </MenuItem>
